# portfolio-full

./: .gitignore  README.md  package.json  tsconfig.json  vercel.json
.agent/skills/superpowers/: SKILL.md
.agent/skills/superpowers/executing-plans/: SKILL.md
.agent/skills/superpowers/requesting-code-review/: SKILL.md
.agent/skills/superpowers/subagent-driven-development/: SKILL.md
.agent/skills/superpowers/systematic-debugging/: SKILL.md
.agent/skills/superpowers/test-driven-development/: SKILL.md
.agent/skills/superpowers/using-git-worktrees/: SKILL.md
.agent/skills/superpowers/verification-before-completion/: SKILL.md
.agent/skills/superpowers/writing-plans/: SKILL.md
apps/cloudnative-deploy/: .coverage  Dockerfile  README.md  pyproject.toml
apps/cloudnative-deploy/app/: main.py
apps/cloudnative-deploy/tests/: test_api.py
apps/datapulse-analytics/: Cargo.toml  Dockerfile  README.md
apps/datapulse-analytics/src/: main.rs
apps/devfolio-api/: README.md  package.json  tsconfig.json  vercel.json
apps/devfolio-api/src/: index.ts  openapi.ts
apps/devfolio-api/src/data/: index.ts
apps/devfolio-api/src/lib/: supabase.ts
apps/devfolio-api/src/routes/: chat.ts  contact.ts  profile.ts  projects.ts
apps/devfolio-api/src/types/: index.ts
apps/devfolio-api/tests/: api.test.ts
apps/devfolio-web/: README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json  vercel.json
apps/devfolio-web/src/app/: globals.css  layout.tsx  page.tsx
apps/devfolio-web/src/app/about/: page.tsx
apps/devfolio-web/src/app/resume/: page.tsx
apps/devfolio-web/src/components/: ChatBot.tsx  Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx  ProjectCard.tsx  Projects.tsx  Providers.tsx  Skills.tsx  Testimonials.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TypeWriter.tsx  index.ts
apps/devfolio-web/src/components/about/: TableOfContents.tsx
apps/devfolio-web/src/components/work/: Projects.tsx
apps/devfolio-web/src/lib/: api.ts
apps/devfolio-web/src/resources/: content.tsx
apps/documind-api/: .coverage  README.md  pyproject.toml  requirements.txt  vercel.json
apps/documind-api/api/: index.py
apps/documind-api/app/: main.py
apps/documind-api/app/services/: document.py  rag.py
apps/documind-api/tests/: test_api.py  test_services.py
apps/documind-web/: package.json  postcss.config.ts  tailwind.config.ts  tsconfig.tsbuildinfo
apps/documind-web/src/app/: globals.css  layout.tsx  page.tsx
apps/flowstate-api/: README.md  coverage.out  go.mod  go.sum  main.go  main_test.go
apps/mindflow-web/: next.config.mjs  package.json  tsconfig.json
apps/mindflow-web/src/app/: globals.scss  layout.tsx  page.tsx
apps/mindflow-web/src/app/insights/: page.tsx
apps/mindflow-web/src/components/: Header.tsx  JournalPreview.tsx  MoodCalendar.tsx  MoodSelector.tsx  Providers.tsx
apps/mindflow-web/src/resources/: config.ts  icons.ts
apps/solstake-protocol/: Cargo.toml  README.md
apps/solstake-protocol/src/: lib.rs
apps/solstake-sdk/: package.json
apps/solstake-sdk/src/: index.ts
docs/: GITHUB_PROFILE_README.md
docs/case-studies/: DATAPULSE.md  DEVFOLIO.md  DOCUMIND.md  FLOWSTATE.md  INFRAHUB.md  SOLSTAKE.md
(+8 files in other folders)
