[package]
name = "datapulse"
version = "0.1.0"
edition = "2021"
description = "High-performance streaming analytics engine"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tokio-test = "0.4"
